--- a/css/index.less
+++ b/css/index.less
@@ -1,6 +1,7 @@
 @import "header";
 @import "section-1";
 @import "section-2";
+@import "section-3";
 
 
 @font-face {
@@ -51,5 +52,4 @@
 .wrapper {
   max-width: 1260px;
   margin: 0 auto;
-
 }
